    - DP reduction was disproportionately favoring alphas previously.
- Nerfed Pseudocore DP reduction in NPC fleets from 20% -> 15%.
- Nerfed damage reduction under a certain condition from 50% to 25%.
- Further nerfed a late-game fight (lowered officer levels, lowered number of ships).

1.1.3
----------
- Replaced ReflectionUtils "setOpacity" with setOpacity calls (added in 0.98).
- Fixed an issue with an achievement completing when it shouldn't.

1.1.2
----------
- Fixed a possible crash if a ship has a mastery effect for a system that it doesn't have (if a mod changes/removes a ship's system on-the-fly, etc.)
- Adjusted a mastery effect to have nicer numbers.

1.1.1
----------
- Added a setting to modify or remove the scaling reroll MP cost.

No new version, just re-download latest:
- (4:20 PM EST 5/26/2025): Civilian MP gain now scales with number of civilian ship types in your fleet, up to a maximum of 5.
- (8:28 PM EST 5/26/2025): Slightly reduced MP gain from large battles, adjusted achievement from 300 MP to 250 MP.
- (8:48 PM EST 5/26/2025): Constructs per SP 10 -> 15.
- (10:27 PM EST 5/26/2025): Analysis package bonus has been capped to 100% (sorry), increased MP needed for achievement to 333.

1.1.0
----------
Save-compatible, now requires MagicLib.

- Added achievements.
- (New game only, not essential) Added concealed probe to Tia.
- (New game only, not essential) Added concealed probe to Penelope's Star.
- Increased MP level-up cost scaling.
- Increased regenerate and enhance MP cost.
- Regenerate MP cost now increases each time you use it (per hull spec).
- Significantly increased early-game MP gain.
- Generally increased MP gain.
- Significantly increased civilian MP gain.
- Reduced price of knowledge constructs from 20000-60000 to 10000-30000.
- Increased knowledge construct drops from concealed stations.
- Decreased the no-bonus-XP threshold when using story points to build in hullmods from 250000 to 200000 credits.