@@ -7,6 +7,11 @@
 - Nerfed damage reduction under a certain condition from 50% to 25%.
 - Further nerfed a late-game fight (lowered officer levels, lowered number of ships).
 
+No new version, just re-download latest:
+- (12:00 PM EST 5/29/2025): Preemptive crash-prevention check added in case a ship's getSpriteAPI is null (should never happen).
+- (12:00 PM EST 5/29/2025): Slightly modified a battle and a fleet.
+
+
 1.1.3
 ----------
 - Replaced ReflectionUtils "setOpacity" with setOpacity calls (added in 0.98).
